[gd_scene load_steps=6 format=2]

[ext_resource path="res://ScenesNScripts/ExerciseCreatorScreen/ExerciseCreatorScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ScenesNScripts/Buttons/RegularButton/RegularButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScenesNScripts/Buttons/ChangeButton/ChangeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ScenesNScripts/Properties/TextProperty.tscn" type="PackedScene" id=5]

[node name="ExerciseCreatorScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 158.0
margin_top = 232.0
margin_right = 562.0
margin_bottom = 1048.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]

[node name="Name2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 404.0
margin_bottom = 404.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Name2"]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Duration:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="CenterContainer/VBoxContainer/Name2"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
custom_fonts/font = ExtResource( 2 )
text = "-1"

[node name="Name3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 404.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Name3"]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Reps:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="CenterContainer/VBoxContainer/Name3"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Save" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 612.0
margin_right = 404.0
margin_bottom = 712.0
text = "Save"

[node name="Back" parent="CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 716.0
margin_right = 404.0
margin_bottom = 816.0
text = "Back"
next_scene = "res://ScenesNScripts/Lists/ExList/ExList.tscn"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
